# jmlearn

./: README.md  pyproject.toml
examples/: play_with_tree.py
src/jmlearn/: __init__.py
src/jmlearn/tree/: __init__.py  decision_tree.py  node.py
