[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jmlearn"
version = "0.0.1"
authors = [
	{name = "Jake Millhiser", email="jmmillhiser@gmail.com"},
]
description = ""
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ElasticDuckCode/jmlearn"
